infrastructure/config/homelab/nginx/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-ingress
  namespace: nginx
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - danielmorgsilva.dev
    secretName: danielmorgsilva-dev-secret

  rules:
  - host: danielmorgsilva.dev
